--- a/package.json
+++ b/package.json
@@ -27,14 +27,17 @@
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "html-to-image": "^1.11.13",
     "lucide-react": "^0.475.0",
     "next": "^15.3.4",
     "next-auth": "^4.24.11",
     "next-cloudinary": "^6.16.0",
+    "nodemailer": "^6.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-loader-spinner": "^6.1.6",
+    "react-qr-code": "^2.0.16",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
@@ -42,6 +45,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
