--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "framer-motion": "^12.23.6",
     "html-to-image": "^1.11.13",
     "lucide-react": "^0.475.0",
     "next": "^15.3.4",
