--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "framer-motion": "^12.23.6",
+    "gsap": "^3.13.0",
     "html-to-image": "^1.11.13",
     "lucide-react": "^0.475.0",
     "next": "^15.3.4",
