--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^4.1.3",
     "@prisma/client": "^6.5.0",
     "@prisma/extension-accelerate": "^1.2.2",
@@ -36,7 +37,7 @@
     "next": "^15.3.4",
     "next-auth": "^4.24.11",
     "next-cloudinary": "^6.16.0",
-    "nodemailer": "^6.10.1",
+    "nodemailer": "^7.0.12",
     "react": "^18.3.1",
     "react-day-picker": "^9.9.0",
     "react-dom": "^18.3.1",
